--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     defaultConfig {
-        applicationId "code.fortomorrow.riceapp"
+        applicationId "code.fortomorrow.happyshopping"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
