--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-core:21.1.1'
-    implementation 'com.firebaseui:firebase-ui-database:6.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
+
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'io.paperdb:paperdb:2.6'
