--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 35
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8  // Change from VERSION_1_1 to VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8  // Change from VERSION_1_1 to VERSION_1_8
     }
     defaultConfig {
         applicationId "code.fortomorrow.happyshopping"
-        minSdkVersion 16
-        targetSdkVersion 34
+        minSdkVersion 26
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -26,7 +26,7 @@ android {
     }
     namespace 'code.fortomorrow.happyshopping'
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'  // Align Kotlin to Java 8
     }
 }
 
@@ -50,13 +50,17 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
+    implementation 'com.google.code.gson:gson:2.10.1'  // or the latest version available
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'io.paperdb:paperdb:2.6'
+//    implementation 'io.paperdb:paperdb:2.6'
+    implementation 'io.github.pilgr:paperdb:2.7.2'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.1'
-    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation("com.vanniktech:android-image-cropper:4.6.0")
+
+//    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
