--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name="code.fortomorrow.happyshopping.MyOrdersActivity"></activity>
-        <activity android:name="code.fortomorrow.happyshopping.Aboutpage" />
-        <activity android:name="code.fortomorrow.happyshopping.CategoryItemActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.ConfirmFinalOrderActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.ProductDetailsActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.SettinsActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.SearchProductsActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.CartActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.HomeActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.RegisterActivity" />
-        <activity android:name="code.fortomorrow.happyshopping.LoginActivity"
+        <activity android:name="code.fortomorrow.happyshopping.view.MyOrdersActivity"></activity>
+        <activity android:name="code.fortomorrow.happyshopping.view.Aboutpage" />
+        <activity android:name="code.fortomorrow.happyshopping.view.CategoryItemActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.ConfirmFinalOrderActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.ProductDetailsActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.SettinsActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.SearchProductsActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.CartActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.HomeActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.RegisterActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="code.fortomorrow.happyshopping.MainActivity" />
+        <activity android:name="code.fortomorrow.happyshopping.view.MainActivity" />
     </application>
 
 </manifest>
